# sqsh

./: .gitignore  Improvements.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.tsx  Toast.tsx  ToastContext.tsx
src-tauri/: 2  Cargo.toml  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
