[package]
name = "sqsh"
version = "1.0.0"
description = "Image Optimizer"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sqsh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
oxipng = "9.0"
image = "0.25"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
zip = "6.0.0"
uuid = { version = "1.18.1", features = ["v4"] }
toml = "0.8"
walkdir = "2"

